--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,13 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2",
+    "mongodb": "^4.11.0",
+    "node-fetch": "^3.2.10",
     "uuid": "^9.0.0"
-  }
+  },
+  "type": "module"
 }
